--- a/contact.css
+++ b/contact.css
@@ -68,7 +68,7 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column; /* ADD THIS */
+  flex-direction: column; 
   align-items: center;
 }
 .nav ul {
