--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ background-color: #000;
     animation: spin 1s linear infinite;
 }
 
-/* Inner black circle to mask the spinning border center */
+
 .social a::after {
     content: "";
     position: absolute;
@@ -106,12 +106,12 @@ background-color: #000;
     left: 6%;
     width: 88%;
     height: 88%;
-    background-color: #111; /* match parent background */
+    background-color: #111; 
     border-radius: 50%;
     z-index: 1;
 }
 
-/* On hover - icon color */
+
 .social a:hover i {
     color: #0ff;
 }
@@ -191,7 +191,7 @@ html {
     ); 
 
     background-clip: text;
-    /* background-clip: text; */
+   
     color: transparent;
     background-size: 200% auto;
     animation: gradientAnimation 3s linear infinite;
@@ -204,7 +204,7 @@ html {
 
 .skills{
     width:100%;
-    /* border: 1px solid red; */
+    
     height: var(--height);
     overflow: hidden;
     mask-image: linear-gradient(
@@ -216,7 +216,7 @@ html {
 }
 .skills .slider{
     display: flex;
-    /* width: 100%; */
+   
     min-width: calc((var(--width)*var(--quantity)));
     position:relative;
 
@@ -281,7 +281,7 @@ html {
     overflow: hidden;
 }
 
-/* Hover - clean upscale with soft glow */
+
 .gallery-item:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 30px rgba(255, 255, 255, 0.2);
@@ -430,7 +430,7 @@ html {
 }
 .center-container {
     text-align: center;
-    margin-top: 50px; /* Optional: space from top */
+    margin-top: 50px; 
   }
   
 
@@ -444,7 +444,7 @@ html {
     text-align: center;
   }
   
-  /* Glowing effect on text */
+ 
   .crazy-text:hover {
     text-shadow:
       0 0 5px yellow,
@@ -452,7 +452,7 @@ html {
       0 0 30px #ffd700;
   }
   
-  /* Firefly burst sparks */
+
   .burst {
     position: absolute;
     width: 8px;
@@ -464,12 +464,12 @@ html {
     z-index: 0;
   }
   
-  /* On hover: animate burst */
+  
   .crazy-text:hover .burst {
     animation: burst 0.6s ease-out forwards;
   }
   
-  /* Keyframe burst motion */
+
   @keyframes burst {
     0% {
       transform: translate(0, 0) scale(1);
@@ -483,7 +483,7 @@ html {
     }
   }
   
-  /* Each firefly with different direction */
+
   .f1 { --x: -40px; --y: -20px; top: 0%; left: 50%; }
   .f2 { --x: 30px;  --y: -40px; top: 10%; left: 60%; }
   .f3 { --x: -35px; --y: 40px;  top: 40%; left: 40%; }
